# Harness-Engineering

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.en.md  README.md  opencode.yaml  pyproject.toml
.agent/plans/: fix-bugs.json  init-tool.json
.github/workflows/: ci.yml  publish.yml
docs/: design.md
src/harness_init/: __init__.py  _templates.py  cli.py  core.py
src/harness_init/templates/: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  opencode.yaml  pyproject.toml
src/harness_init/templates/.harness/templates/: plan_template.md
src/harness_init/templates/cli/: AGENTS.md
src/harness_init/templates/common/docs/: PROJECT_MAP.md  context.md
src/harness_init/templates/common/docs/decisions/: ADR_TEMPLATE.md
src/harness_init/templates/configs/: dev.yaml  prod.yaml  test.yaml
src/harness_init/templates/docs/: PROJECT_MAP.md  context.md
src/harness_init/templates/lib/: AGENTS.md  pyproject.toml
src/harness_init/templates/lib/src/{package_name}/: __init__.py
src/harness_init/templates/lib/tests/: test_init.py
src/harness_init/templates/notebook/: AGENTS.md  pyproject.toml
src/harness_init/templates/notebook/notebooks/: example.ipynb
src/harness_init/templates/notebook/tests/: test_notebooks.py
src/harness_init/templates/src/{package_name}/: cli.py
src/harness_init/templates/src/{package_name}/agents/: evaluator.py  generator.py  planner.py
src/harness_init/templates/src/{package_name}/harness/: evaluator.py  runner.py  state.py  workflow.py
src/harness_init/templates/tests/: test_cli.py  test_harness.py
src/harness_init/templates/web/: AGENTS.md  pyproject.toml
src/harness_init/templates/web/src/{package_name}/: main.py
src/harness_init/templates/web/tests/: test_main.py
tests/: test_cli.py  test_core.py  test_templates.py
