[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{pep508_name}"
version = "0.1.0"
description = "A Harness Engineering notebook project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "{author_name}", email = "{author_email}"},
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".harness/", "configs/", "notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"
